stream test example