@@ -1,14 +1,14 @@
 package org.github.ogomezso.playground.parallelconsumer;
 
-import java.util.Arrays;
 import java.util.List;
 
-import es.santander.kafka.test.objects.TestRecord;
+import es.santander.libcom.kafka.test.objects.TestRecord;
+
 
 public class TestRecordsMotherObject {
 
     public static List<TestRecord<String, String>> createTestRecords() {
-        return Arrays.asList(
+        return List.of(
                 TestRecord.<String, String>builder().key("1").value("1.b").build(),
                 TestRecord.<String, String>builder().key("1").value("1.a").build(),
                 TestRecord.<String, String>builder().key("1").value("1.c").build(),
@@ -30,4 +30,13 @@ public class TestRecordsMotherObject {
                 TestRecord.<String, String>builder().key("4").value("4.d").build(),
                 TestRecord.<String, String>builder().key("4").value("4.e").build());
     }
+
+	public static List<TestRecord<String, String>> createWordcountRecords() {
+		return List.of(
+            TestRecord.<String, String>builder().value("en").build(),
+            TestRecord.<String, String>builder().value("en un").build(),
+            TestRecord.<String, String>builder().value("en un lugar de").build(),
+            TestRecord.<String, String>builder().value("en un lugar de La Mancha").build()
+        );
+	}
 }
